# ExceptionOrientedProgramming

./: README.md
Part 1/: README.md
Part 1/Windows/: EOPManager.cpp  ExceptionOrientedProgramming_PoC.sln
Part 1/macOS/: CMakeLists.txt
Part 2/: README.md
Part 2/CollidedUnwindExploit/: AppCommunicator.py  CustomStructs.py  NetworkHelper.py  WebDavHelper.py  exploit.py  requirements.txt
Part 2/MiscellaneousTools/: dump_c_handlers.py
Part 2/VulnerableAppPoC/: VulnerableAppPoC.sln
Part 2/VulnerableAppPoC/VulnerableApp/: SharedNetworkStructs.h  VulnerableApp.cpp  VulnerableApp.vcxproj
Windows/: EOPManager.h  ExceptionOrientedProgramming_PoC.cpp  ExceptionOrientedProgramming_PoC.vcxproj  ExceptionOrientedProgramming_PoC.vcxproj.filters  ntdef.h
macOS/: main.cpp
